--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "djangorestframework>=3.15.1",
     "django-environ>=0.11.2",
     "slippers>=0.6.2",
+    "django-storages[s3]>=1.14.3",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
