--- a/requirements.txt
+++ b/requirements.txt
@@ -2,25 +2,33 @@
 # Please do not edit it manually.
 
 asgiref==3.8.1
+boto3==1.34.122
+botocore==1.34.122
 brotli==1.1.0
 cfgv==3.4.0
 distlib==0.3.8
 django==5.0.6
 django-environ==0.11.2
+django-storages==1.14.3
 djangorestframework==3.15.1
 filelock==3.14.0
 identify==2.5.36
+jmespath==1.0.1
 nodeenv==1.9.1
 platformdirs==4.2.2
 pre-commit==3.7.1
 psycopg==3.1.19
 psycopg-binary==3.1.19; implementation_name != "pypy"
+python-dateutil==2.9.0.post0
 pyyaml==6.0.1
 ruff==0.4.8
+s3transfer==0.10.1
+six==1.16.0
 slippers==0.6.2
 sqlparse==0.5.0
 typeguard==2.13.3
 typing-extensions==4.12.2
 tzdata==2024.1; sys_platform == "win32"
+urllib3==2.2.1; python_version >= "3.10"
 virtualenv==20.26.2
 whitenoise==6.6.0
